2007-09-26  Ivan N. Zlatev <contact@i-nz.net>

	* DesignTime/CodeProviderDesignerLoader.cs: SetUIDirty to 
	clear the errors.
	* UI/ErrorListTabPage.cs, UI/ErrorList.cs: new TabPage.
	* UI/MainView.cs: refactor to use the ErrorListTabPage.
	* Project/Document.cs, UI/MainView.cs: Handle failed to 
	load documents.
	* Project/Document.cs: add disposing behavior.
	* Project/Document.cs, Project/Workspace.cs, UI/MainView.cs:
	Move document load/close logic to the workspace.
	* Project/Workspace.cs, UI/MainView.cs: documents now can be
	associated with a key object.
	* UI/PropertyGrid.cs: NRE fixes.

2007-09-19  Ivan N. Zlatev <contact@i-nz.net>

	* UI/MainView.cs: Show the Errors tab.

2007-09-18  Ivan N. Zlatev <contact@i-nz.net>

	* DesignTime/CodeProviderDesignerLoader.cs: Make use of IUIService
	to report errors.
	* UI/ErrorList.cs: Add.

2007-09-13  Ivan N. Zlatev <contact@i-nz.net>
	
	* UI/ReferencesDialog.cs: Allow referencing executables.
	* UI/MainView.Designer.cs: Use FixedPanel layouting.

2007-09-09  Ivan N. Zlatev <contact@i-nz.net>

	* Makefile: fix build.

2007-09-06  Jonathan Pobst <monkey@jpobst.com>

	* UI/MainView.cs: Use Suspend/ResumeLayout for performance increase
	when populating the toolbox.

2007-09-06  Jonathan Pobst <monkey@jpobst.com>

	* UI/ToolBoxList/ToolBoxGroupPanel.cs: After we muck around with
	ControlAdded, we need another layout to fix everything up.

2007-09-02  Ivan N. Zlatev <contact@i-nz.net>

	* UI/ToolBoxList/*.cs: spaces to tabs.

2007-09-02  Ivan N. Zlatev <contact@i-nz.net>

	* UI/ToolBoxList/ToolBoxGroupHeader.cs: Make categories more
	visually recognizable.

2007-09-02  Ivan N. Zlatev <contact@i-nz.net>

	* UI/ToolBoxList/ToolBoxList.cs: Rename default category 
	from "All Controls" to "All".
	* DesignTime/TypeResolutionService.cs: Implement ReferenceAssembly.
	* Project/Workspace, UI/MainView.cs: Toolbox categorization. 

2007-08-31  Ivan N. Zlatev <contact@i-nz.net>
