@@ -1,3 +1,8 @@
+2007-10-24  Ivan N. Zlatev <contact@i-nz.net>
+
+	* Program.cs: More exception handling.
+	* UI/NewFileDialog.cs: Usability improvements.
+
 2007-09-26  Ivan N. Zlatev <contact@i-nz.net>
 
 	* DesignTime/CodeProviderDesignerLoader.cs: SetUIDirty to 
